--- a/src/components/AuthModal/AuthModal.css
+++ b/src/components/AuthModal/AuthModal.css
@@ -1,6 +1,6 @@
 .modal {
 	width: 100vw;
-	height: 100vh;
+	height: 100vh - 60px;
 	background-color: #23272A;
 	display: flex;
 	align-items: center;
